--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="price">Price</string>
     <string name="description">Description</string>
     <string name="name">Name</string>
+    <string name="back">Back\n</string>
 </resources>
